Fix vertical alignment and font size

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,8 @@ html, body {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 20px;
+    align-items: center;
+    margin: 10px 20px;
 }
 
 nav a {
@@ -76,7 +77,7 @@ footer {
 
 footer a {
     font-family: "arial", "sans-sarif";
-    font-size: 14px;
+    font-size: 13px;
     color: #000;
     opacity: 0.65;
     padding: 5px;
